tests/tokenizer/unterminated_multiline_comment.err.out
tests/tokenizer/unterminated_multiline_comment.err.ri:2:1: error: unterminated multiline comment
      | 
    2 | unterminated multiline comment :(
      | ^                                
error: could not compile source code, aborting due to previous error